log/build_2020-07-16_10-57-43/keyboard_control2/stderr.log
  File "/home/jordan/ros2_dev_ws/src/keyboard_control2/install/keyboard_control2/lib/python3.8/site-packages/keyboard_control2/keyboard_input3.py", line 30
    global publisher = node.create_publisher(Twist, 'cmd_vel', 10)
                     ^
SyntaxError: invalid syntax

